--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,25 +1,48 @@
+# Core dependencies
 fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
-requests>=2.31.0
-beautifulsoup4>=4.12.0
-langchain>=0.1.0
-langchain-community>=0.0.20
-langchain-openai>=0.0.5
-openai>=1.0.0
-faiss-cpu>=1.7.4
-google-api-python-client>=2.100.0
-google-auth>=2.23.0
-google-auth-oauthlib>=1.1.0
-google-auth-httplib2>=0.1.1
-pypdf>=3.17.0
+pydantic>=2.0.0
 python-multipart>=0.0.6
+
+# Authentication
 python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
-typer>=0.9.0
-rich>=13.6.0
-pandas>=2.1.0
-openpyxl>=3.1.0
+
+# RAG and LLM
+langchain>=0.1.0
+langchain-openai>=0.0.5
+langchain-community>=0.0.10
+faiss-cpu>=1.7.4
+openai>=1.0.0
+
+# Optional LLM providers
+anthropic>=0.8.0  # Optional: for Anthropic support
+google-cloud-aiplatform>=1.38.0  # Optional: for Vertex AI support
+
+# Document processing
+pypdf>=3.17.0
 python-docx>=1.1.0
 python-pptx>=0.6.23
-pydantic>=2.4.0
+openpyxl>=3.1.2
+beautifulsoup4>=4.12.0
+
+# Google Drive integration
+google-auth>=2.25.0
+google-api-python-client>=2.111.0
+
+# Database and analytics
+pandas>=2.1.0
+sqlite3  # Built-in
+
+# CLI and UI
+typer>=0.9.0
+rich>=13.7.0
+
+# Web scraping
+requests>=2.31.0
 lxml>=4.9.0
+
+# Testing (optional)
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+httpx>=0.25.0
