--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ google-api-python-client>=2.111.0
 
 # Database and analytics
 pandas>=2.1.0
-sqlite3  # Built-in
+# sqlite3  # Built-in
 
 # CLI and UI
 typer>=0.9.0
