--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,8 @@ python-docx>=1.1.0
 python-pptx>=0.6.23
 openpyxl>=3.1.2
 beautifulsoup4>=4.12.0
+pdf2image>=1.17.0
+pytesseract>=0.3.10
 
 # Google Drive integration
 google-auth>=2.25.0
